@@ -34,12 +34,7 @@ import de.rub.nds.tlsattacker.core.state.State;
 import de.rub.nds.tlsattacker.core.workflow.ParallelExecutor;
 import de.rub.nds.tlsattacker.core.workflow.WorkflowTrace;
 import de.rub.nds.tlsattacker.core.workflow.WorkflowTraceResultUtil;
-import de.rub.nds.tlsattacker.core.workflow.action.MessageAction;
-import de.rub.nds.tlsattacker.core.workflow.action.ReceiveAction;
-import de.rub.nds.tlsattacker.core.workflow.action.ResetConnectionAction;
-import de.rub.nds.tlsattacker.core.workflow.action.SendAction;
-import de.rub.nds.tlsattacker.core.workflow.action.SendDynamicClientKeyExchangeAction;
-import de.rub.nds.tlsattacker.core.workflow.action.TlsAction;
+import de.rub.nds.tlsattacker.core.workflow.action.*;
 import de.rub.nds.tlsattacker.core.workflow.factory.WorkflowConfigurationFactory;
 import de.rub.nds.tlsattacker.core.workflow.factory.WorkflowTraceType;
 import de.rub.nds.tlsscanner.core.constants.TlsAnalyzedProperty;
@@ -48,10 +43,8 @@ import de.rub.nds.tlsscanner.serverscanner.report.ServerReport;
 import de.rub.nds.tlsscanner.serverscanner.selector.ConfigSelector;
 import java.util.ArrayList;
 import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 public class ResumptionProbe extends TlsServerProbe {
 
@@ -63,6 +56,7 @@ public class ResumptionProbe extends TlsServerProbe {
     private TestResult issuesTls13SessionTicketAfterHandshake = TestResults.COULD_NOT_TEST;
     private TestResult issuesTls13SessionTicketWithApplicationData = TestResults.COULD_NOT_TEST;
     private TestResult supportsTls13PskDhe = TestResults.COULD_NOT_TEST;
+    private TestResult selectsTls13PskDhe = TestResults.COULD_NOT_TEST;
     private TestResult supportsTls13Psk = TestResults.COULD_NOT_TEST;
     private TestResult supportsTls13ZeroRtt = TestResults.COULD_NOT_TEST;
     private TestResult supportsDtlsCookieExchangeInSessionTicketResumption =
@@ -76,6 +70,7 @@ public class ResumptionProbe extends TlsServerProbe {
                 TlsAnalyzedProperty.ISSUES_TLS13_SESSION_TICKETS_AFTER_HANDSHAKE,
                 TlsAnalyzedProperty.ISSUES_TLS13_SESSION_TICKETS_WITH_APPLICATION_DATA,
                 TlsAnalyzedProperty.SUPPORTS_TLS13_PSK_DHE,
+                TlsAnalyzedProperty.SELECTS_TLS13_PSK_DHE,
                 TlsAnalyzedProperty.SUPPORTS_TLS13_0_RTT,
                 TlsAnalyzedProperty.SUPPORTS_TLS13_PSK,
                 TlsAnalyzedProperty.SUPPORTS_DTLS_COOKIE_EXCHANGE_IN_SESSION_ID_RESUMPTION,
@@ -103,6 +98,7 @@ public class ResumptionProbe extends TlsServerProbe {
             issuesTls13SessionTicketWithApplicationData = getIssuesTls13SessionTicket(true);
             supportsTls13PskDhe = getSupportsTls13Psk(PskKeyExchangeMode.PSK_DHE_KE);
             supportsTls13Psk = getSupportsTls13Psk(PskKeyExchangeMode.PSK_KE);
+            selectsTls13PskDhe = getSelectsTls13PskDhe();
             supportsTls13ZeroRtt = getSupports0rtt();
         }
         supportsResumption = getSupportsSessionResumption();
@@ -262,6 +258,44 @@ public class ResumptionProbe extends TlsServerProbe {
         }
     }
 
+    private Config buildBaseTls13PskConfig(
+            List<PskKeyExchangeMode> modes, WorkflowTraceType traceType, boolean includeAppData) {
+        Config config = configSelector.getTls13BaseConfig();
+        config.setPSKKeyExchangeModes(modes);
+        config.setAddPSKKeyExchangeModesExtension(true);
+        config.setAddPreSharedKeyExtension(true);
+        config.setWorkflowTraceType(traceType);
+        config.setStopTraceAfterUnexpected(false);
+
+        if (includeAppData) {
+            StackConfiguration stackConfiguration =
+                    configSelector
+                            .getScannerConfig()
+                            .getApplicationProtocol()
+                            .getExpectedStackConfiguration();
+            if (stackConfiguration != null) {
+                config.setDefaultLayerConfiguration(stackConfiguration);
+            }
+        }
+
+        return config;
+    }
+
+    private void injectDummyApplicationData(State state, Config config) {
+        WorkflowTrace trace = state.getWorkflowTrace();
+        int resetIndex =
+                trace.getTlsActions().indexOf(trace.getFirstAction(ResetConnectionAction.class));
+        List<TlsAction> actionsToAdd =
+                configSelector
+                        .getScannerConfig()
+                        .getApplicationProtocol()
+                        .createDummyActions(config);
+
+        for (int i = 0; i < actionsToAdd.size(); i++) {
+            trace.addTlsAction(resetIndex - 1 + i, actionsToAdd.get(i));
+        }
+    }
+
     private TestResult isKeyShareExtensionNegotiated(State state) {
         List<HandshakeMessage> handshakes =
                 WorkflowTraceResultUtil.getAllReceivedHandshakeMessages(state.getWorkflowTrace());
@@ -269,7 +303,7 @@ public class ResumptionProbe extends TlsServerProbe {
                 handshakes.stream()
                         .filter(message -> message instanceof ServerHelloMessage)
                         .map(message -> (ServerHelloMessage) message)
-                        .collect(Collectors.toList());
+                        .toList();
         if (hellos.size() < 2) {
             return TestResults.COULD_NOT_TEST;
         }
@@ -280,46 +314,22 @@ public class ResumptionProbe extends TlsServerProbe {
     }
 
     private TestResult getSupportsTls13Psk(PskKeyExchangeMode exchangeMode) {
-        // add app data if the server does not issue a ticket without them.
         boolean addApplicationData =
                 issuesTls13SessionTicketAfterHandshake == TestResults.FALSE
                         && issuesTls13SessionTicketWithApplicationData == TestResults.TRUE;
+
         try {
             if (configSelector.foundWorkingTls13Config()) {
-                Config tlsConfig = configSelector.getTls13BaseConfig();
-                List<PskKeyExchangeMode> pskKex = new LinkedList<>();
-                pskKex.add(exchangeMode);
-                tlsConfig.setPSKKeyExchangeModes(pskKex);
-                tlsConfig.setAddPSKKeyExchangeModesExtension(true);
-                tlsConfig.setAddPreSharedKeyExtension(true);
-                tlsConfig.setWorkflowTraceType(WorkflowTraceType.FULL_TLS13_PSK);
-                // allow an early NewSessionTicket without aborting execution
-                tlsConfig.setStopTraceAfterUnexpected(false);
-                if (addApplicationData) {
-                    StackConfiguration stackConfiguration =
-                            configSelector
-                                    .getScannerConfig()
-                                    .getApplicationProtocol()
-                                    .getExpectedStackConfiguration();
-                    if (stackConfiguration != null) {
-                        tlsConfig.setDefaultLayerConfiguration(stackConfiguration);
-                    }
-                }
+                Config tlsConfig =
+                        buildBaseTls13PskConfig(
+                                List.of(exchangeMode),
+                                WorkflowTraceType.FULL_TLS13_PSK,
+                                addApplicationData);
+
                 State state = new State(tlsConfig);
 
                 if (addApplicationData) {
-                    WorkflowTrace trace = state.getWorkflowTrace();
-                    int resetIndex =
-                            trace.getTlsActions()
-                                    .indexOf(trace.getFirstAction(ResetConnectionAction.class));
-                    List<TlsAction> actionsToAdd =
-                            configSelector
-                                    .getScannerConfig()
-                                    .getApplicationProtocol()
-                                    .createDummyActions(tlsConfig);
-                    for (int i = 0; i < actionsToAdd.size(); i++) {
-                        trace.addTlsAction(resetIndex - 1 + i, actionsToAdd.get(0));
-                    }
+                    injectDummyApplicationData(state, tlsConfig);
                 }
 
                 executeState(state);
@@ -345,6 +355,83 @@ public class ResumptionProbe extends TlsServerProbe {
                 throw new RuntimeException(e);
             } else {
                 LOGGER.error("Could not test for support for Tls13Psk ({}): ", exchangeMode, e);
+            }
+            return TestResults.ERROR_DURING_TEST;
+        }
+    }
+
+    private TestResult getSelectsTls13PskDhe() {
+        List<PskKeyExchangeMode> exchangeModes =
+                List.of(PskKeyExchangeMode.PSK_DHE_KE, PskKeyExchangeMode.PSK_KE);
+        boolean addApplicationData =
+                issuesTls13SessionTicketAfterHandshake == TestResults.FALSE
+                        && issuesTls13SessionTicketWithApplicationData == TestResults.TRUE;
+
+        try {
+            if (configSelector.foundWorkingTls13Config()) {
+                Config firstConfig =
+                        buildBaseTls13PskConfig(
+                                exchangeModes,
+                                WorkflowTraceType.FULL_TLS13_PSK,
+                                addApplicationData);
+                Config secondConfig =
+                        buildBaseTls13PskConfig(
+                                List.of(PskKeyExchangeMode.PSK_KE, PskKeyExchangeMode.PSK_DHE_KE),
+                                WorkflowTraceType.FULL_TLS13_PSK,
+                                addApplicationData);
+
+                State firstState = new State(firstConfig);
+                State secondState = new State(secondConfig);
+
+                if (addApplicationData) {
+                    injectDummyApplicationData(firstState, firstConfig);
+                    injectDummyApplicationData(secondState, secondConfig);
+                }
+
+                executeState(firstState);
+
+                MessageAction lastRcv =
+                        (MessageAction) firstState.getWorkflowTrace().getLastReceivingAction();
+                if (lastRcv.executedAsPlanned()) {
+                    // Check if the key_share extension is negotiated. This determines which key
+                    // extension mode the server selected.
+                    TestResult keyShareExtensionNegotiated =
+                            isKeyShareExtensionNegotiated(firstState);
+                    // If the key_share extension was not negotiated it means PSK_DHE_KE was not
+                    // selected.
+                    if (!keyShareExtensionNegotiated.equals(TestResults.TRUE)) {
+                        return TestResults.FALSE;
+                    } else {
+                        // Execute second handshake with order of exchange modes reversed.
+                        executeState(secondState);
+                        lastRcv =
+                                (MessageAction)
+                                        secondState.getWorkflowTrace().getLastReceivingAction();
+                        if (lastRcv.executedAsPlanned()) {
+                            // Check if the key_share extension is negotiated. This determines which
+                            // key extension mode the server selected.
+                            keyShareExtensionNegotiated =
+                                    isKeyShareExtensionNegotiated(secondState);
+                            // If the key_share extension was negotiated it means PSK_DHE_KE was
+                            // selected in both handshakes.
+                            if (keyShareExtensionNegotiated.equals(TestResults.TRUE)) {
+                                return TestResults.TRUE;
+                            }
+                        }
+                    }
+                }
+            }
+            return TestResults.FALSE;
+        } catch (Exception e) {
+            if (e.getCause() instanceof InterruptedException) {
+                LOGGER.error("Timeout on " + getProbeName());
+                throw new RuntimeException(e);
+            } else {
+                LOGGER.error(
+                        "Could not test if the server selects PSK_DHE_KE as the TLS 1.3 PSK key exchange mode (provided: "
+                                + exchangeModes
+                                + "): ",
+                        e);
             }
             return TestResults.ERROR_DURING_TEST;
         }
@@ -383,24 +470,15 @@ public class ResumptionProbe extends TlsServerProbe {
     private TestResult getIssuesTls13SessionTicket(boolean includeApplicationData) {
         try {
             if (configSelector.foundWorkingTls13Config()) {
-                Config tlsConfig = configSelector.getTls13BaseConfig();
-                List<PskKeyExchangeMode> pskKex = new LinkedList<>();
-                pskKex.add(PskKeyExchangeMode.PSK_DHE_KE);
-                pskKex.add(PskKeyExchangeMode.PSK_KE);
-                tlsConfig.setPSKKeyExchangeModes(pskKex);
-                tlsConfig.setAddPSKKeyExchangeModesExtension(true);
-                tlsConfig.setWorkflowTraceType(WorkflowTraceType.DYNAMIC_HANDSHAKE);
-                if (includeApplicationData) {
-                    StackConfiguration stackConfiguration =
-                            configSelector
-                                    .getScannerConfig()
-                                    .getApplicationProtocol()
-                                    .getExpectedStackConfiguration();
-                    if (stackConfiguration != null) {
-                        tlsConfig.setDefaultLayerConfiguration(stackConfiguration);
-                    }
-                }
+                Config tlsConfig =
+                        buildBaseTls13PskConfig(
+                                List.of(PskKeyExchangeMode.PSK_DHE_KE, PskKeyExchangeMode.PSK_KE),
+                                WorkflowTraceType.DYNAMIC_HANDSHAKE,
+                                includeApplicationData);
+                tlsConfig.setAddPreSharedKeyExtension(false);
+
                 State state = new State(tlsConfig);
+
                 if (includeApplicationData) {
                     state.getWorkflowTrace()
                             .addTlsActions(
@@ -415,6 +493,7 @@ public class ResumptionProbe extends TlsServerProbe {
                                 new ReceiveAction(
                                         tlsConfig.getDefaultClientConnection().getAlias(),
                                         new NewSessionTicketMessage()));
+
                 executeState(state);
 
                 if (WorkflowTraceResultUtil.didReceiveMessage(
@@ -422,6 +501,7 @@ public class ResumptionProbe extends TlsServerProbe {
                     return TestResults.TRUE;
                 }
             }
+
             return TestResults.FALSE;
         } catch (Exception e) {
             if (e.getCause() instanceof InterruptedException) {
@@ -465,6 +545,7 @@ public class ResumptionProbe extends TlsServerProbe {
                 TlsAnalyzedProperty.ISSUES_TLS13_SESSION_TICKETS_WITH_APPLICATION_DATA,
                 issuesTls13SessionTicketWithApplicationData);
         put(TlsAnalyzedProperty.SUPPORTS_TLS13_PSK_DHE, supportsTls13PskDhe);
+        put(TlsAnalyzedProperty.SELECTS_TLS13_PSK_DHE, selectsTls13PskDhe);
         put(TlsAnalyzedProperty.SUPPORTS_TLS13_0_RTT, supportsTls13ZeroRtt);
         put(TlsAnalyzedProperty.SUPPORTS_TLS13_PSK, supportsTls13Psk);
         put(
